# localize

./: .gitignore  LICENSE  README.md
amcl/: CMakeLists.txt  package.xml
amcl/config/: map_actual.yaml  map_modified.yaml  real.yaml  sim.yaml
amcl/include/amcl/: amcl.h  common.h  distribution.h  histogram.h  motion.h  node.h  sensor.h  util.h
amcl/launch/: amcl.launch  amcl_teleop.launch
amcl/maps/: actual.yaml  apartment_1.xcf  apartment_layered.pdn  modified.yaml
amcl/scripts/: run.sh
amcl/src/: amcl.cpp  common.cpp  distribution.cpp  histogram.cpp  main.cpp  motion.cpp  node.cpp  sensor.cpp  test.cpp
mcl/: CMakeLists.txt  package.xml
mcl/config/: real.yaml  sim.yaml
mcl/include/mcl/: common.h  dist.h  distribution.h  histogram.h  mcl.h  mcl_node.h  motion.h  node.h  prob.h  sensor.h  util.h
mcl/launch/: map_server.launch  mcl.launch  mcl_real.launch  mcl_real_lidar.launch  mcl_sim.launch  mcl_sim_lidar.launch  mcl_teleop.launch
mcl/maps/: apartment_2.xcf  apartment_scan_1.pgm  apartment_scan_2.pgm  map.yaml  map_actual.yaml  map_modified.yaml  test.yaml
mcl/scripts/: mcl.sh  run.sh
mcl/src/: common.cpp  dist.cpp  distribution.cpp  histogram.cpp  main.cpp  mcl.cpp  mcl_main.cpp  mcl_node.cpp  motion.cpp  node.cpp  sensor.cpp  test.cpp  tf.txt  util.cpp
