<?xml version="1.0"?>
<package format="2">
  <name>amcl</name>
  <version>1.0.0</version>
  <description>Adaptive Monte-Carlo Localization</description>

  <maintainer email="droemer7@gmail.com">Dane</maintainer>
  <author email="droemer7@gmail.com">Dane</author>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>vesc_msgs</depend>
</package>
