<?xml version="1.0"?>
<package format="2">
  <name>mcl</name>
  <version>0.0.0</version>
  <description>Monte-Carlo Localization</description>

  <maintainer email="droemer7@gmail.com">Dane</maintainer>
  <author email="droemer7@gmail.com">Dane</author>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>vesc_msgs</depend>

  <build_depend>range_lib</build_depend>
  <build_export_depend>range_lib</build_export_depend>
</package>
